2002-06-02  Havoc Pennington  <hp@pobox.com>

	* backends/xml-cache.c (cache_lookup): don't leave a dir marked
	nonexistent after creating it
	(cache_set_nonexistent): remove hash entry _before_ freeing 
	the current key. Should fix assorted "gconf loses my settings"
	kind of bugs.

	* backends/xml-dir.c (dir_sync): don't try to delete the root dir,
	should fix some warnings.

2002-05-27  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added Malay (ms)to ALL_LINGUAS.
	* po/ms.po: Added Malay Translation.

2002-05-27  Havoc Pennington  <hp@pobox.com>

	* backends/markup-tree.c: implement all the tree reading stuff,
	need to implement modification/writing and implement
	markup-backend.c. (Backend is totally unused and unusable 
	until post-GNOME2, don't worry.)
	
	* gconf/gconf-internals.h (gconf_value_set_string_nocopy): 
	new function

2002-05-15  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-05-10  Shivaram U  <shivaram.upadhyayula@wipro.com>

	* doc/gconf/Makefile.am: Honouring CFLAGS and LDFLAGS passed by the user
	Ensures successful 64bit build on Solaris.

2002-05-09  Michael Meeks <michael@ximian.com>

	* backends/xml-entry.c (entry_get_value): ensure we
	don't print a NULL.

2002-04-29  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Basque (eu) to ALL_LINGUAS

2002-04-29  Havoc Pennington  <hp@pobox.com>

	* configure.in: 1.1.10

2002-04-26  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-changeset.c: make the internal functions static

	* gconf/gconf-internals.c (byte_type): make static
	(get_hostname): remove

	* gconf/gconfd.c (add_client): set the maximum connection buffer
	to a reasonable-size value in order to handle locked-up clients.
	
	* backends/xml-entry.c (node_set_schema_value): opacity fixes

	* gconf/gconftool.c (list_pairs_in_dir): opacity fixes

	* gconf/gconf.c: opacity fixes
	(gconf_engine_get_for_address): remove the g_warning about using